--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,8 +1,8 @@
 # Name of your application. Used to uniquely configure containers.
-service: my-app
+service: lcb
 
 # Name of the container image.
-image: user/my-app
+image: user/lcb
 
 # Deploy to these servers.
 servers:
